<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SARU</string>
    <string name="title_transaction_checkout">CHECK OUT</string>
    <string name="title_DeliveryInformation_product_name">Ruou Ngo</string>
    <string name="tilte_products">PRODUCTS</string>
    <string name="title_search_bar">Search</string>
    <string name="title_filter_product">Filter</string>
    <string name="title_DeliveryInformation_add_to_cart">Add to cart</string>
    <string name="title_DeliveryInformation_product_price">200.000đ</string>
    <string name="title_product_detail">PRODUCT DETAILS\n</string>
    <string name="title_compare_button">Compare</string>
    <string name="title_product_description">Whether consumed straight or mixed, Peach Plum Wine is a versatile and satisfying drink for both beginners and experienced drinkers.</string>
    <string name="title_related_products">RELATED PRODUCTS</string>
    <string name="title_DeliveryInformation_product_brand">Mam Distillery</string>
    <string name="title_product_status">In stock</string>
    <string name="title_product_alcohol">Alcohol Strenght</string>
    <string name="title_product_net">Net Content</string>
    <string name="title_product_type">Wine type</string>
    <string name="title_product_ingredients">Ingredients</string>
    <string name="title_compare">Compare</string>
    <string name="title_filter_product_dialog">Filter Products</string>
    <string name="title_filter_product_dialog_price_range">Price range</string>
    <string name="title_filter_product_dialog_others">Others</string>
    <string name="title_filter_product_apply">Apply Filter</string>
    <string name="title_filter_product_reset">Reset Filter</string>
    <string name="title_product_comparison">PRODUCTS COMPARISON</string>
    <string name="title_product_taste">Taste</string>
    <string name="title_product_comparison_price">Price</string>
    <string name="title_product_comparison_subtitle">Help you have the best choice!</string>
    <string name="title_delete_btn_comparison">Delete all</string>
    <string name="title_product_cart">PRODUCT CART</string>
    <string name="title_product_cart_name">Ruou Mo Ma Dao Moc Chau</string>
    <string name="title_product_cart_price">Price: 400.000đ</string>
    <string name="title_product_cart_total_price">Total price: 400.000đ</string>
    <string name="title_product_cart_select_all">Select all</string>
    <string name="title_product_cart_payment">Make Payment</string>
    <string name="title_product_comparison_name">Peach Wine</string>
    <string name="Homepage_TayBac_Wine">Tay Bac Wine</string>
    <string name="Homepage_Accessories">Accessories</string>
    <string name="Homepage_Wine_Gift">Set wine gift</string>
    <string name="Homepage_CS">Customer Service</string>
    <string name="Homepage_Orders">Orders</string>
    <string name="Homepage_supersale_section">SUPER SALE</string>
    <string name="Title_view_all">View all</string>
    <string name="Homepage_BestSeller_section">BEST SELLER</string>
    <string name="Homepage_Customer_reviews">CUSTOMER REVIEWS</string>
    <string name="title_voucher_management">VOUCHERS MANAGEMENT</string>
    <string name="Voucher_save_btn">Save</string>
    <string name="Voucher_description">Free ship for new customer</string>
    <string name="Voucher_value">Discount 200</string>
    <string name="Voucher_status">Expired</string>
    <string name="title_DeliveryInformation_transaction_checkout">Check Out</string>
    <string name="Voucher_status_2">Expired</string>
    <string name="title_delivery_information">Delivery Information</string>
    <string name="title_customer_name">Anh Khoa</string>
    <string name="title_customer_phone_number">0941705717</string>
    <string name="title_customer_address">Dormitory Area B - Ho Chi Minh City National University, Thu Duc City, Ho Chi Minh City, Vietnam</string>
    <string name="title_product">Product</string>
    <string name="title_customer_name_2">Customer Name</string>
    <string name="title_product_name">RƯỢU MƠ MÁ ĐÀO MỘC CHÂU</string>
    <string name="title_product_name_1">RƯỢU MƠ MÁ ĐÀO MỘC CHÂU</string>
    <string name="title_product_name_2">RƯỢU MƠ MÁ ĐÀO MỘC CHÂU</string>
    <string name="title_product_name_3">RƯỢU MƠ MÁ ĐÀO MỘC CHÂU</string>
    <string name="title_brand">Brand:</string>
    <string name="title_brand_name_3">xxxxxxxxxxxx</string>
    <string name="title_brand_name_2">yyyyyyyyyyy</string>
    <string name="title_brand_name">Hua Quang Han</string>
    <string name="title_merchandise_total_price">1.020.000đ</string>
    <string name="title_shipping_fee_price">20.000 đ</string>
    <string name="title_total_item">xx</string>
    <string name="title_product_price_original_2">230.000 đ</string>
    <string name="title_shipping_fee">Shipping Fee:</string>
    <string name="title_merchandise_total">Merchandise Total</string>
    <string name="title_item_quantity">Items</string>
    <string name="title_delivery_time">Time to delivery</string>
    <string name="title_expected_delivery">Expected Delivery ngày 2 tháng 7 năm 2025</string>
    <string name="title_voucher_code">Voucher Code</string>
    <string name="title_voucher_apply">Apply</string>
    <string name="title_voucher_code_hint">Enter voucher code here</string>
    <string name="title_applied">Applied</string>
    <string name="title_voucher_applied_success">Voucher applied successfully!</string>
    <string name="title_invalid_voucher_code">Invalid voucher code</string>
    <string name="title_enter_voucher_code_message">Please enter a voucher code</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_cash_on_delivery">Cash on Delivery (COD)</string>
    <string name="title_cod_detail">Cash on delivery</string>
    <string name="title_bank">Bank (Credit or Debit)</string>
    <string name="title_bank_name">Vietcombank</string>
    <string name="title_customer_bank_name">Anh Khoa</string>
    <string name="title_bank_type">Mastercard</string>
    <string name="title_bank_number_card">******789</string>
    <string name="title_ewallet">E-Wallet</string>
    <string name="title_ewallet_detail">Momo Ewallet</string>
    <string name="title_transaction_term">"By clicking \"Place Order\", you are agreeing to Saru's General Transaction Term "</string>
    <string name="title_place_order">Place Order</string>
    <string name="title_total_payment">Total Payment</string>
    <string name="title_total_price">1.020.000 đ</string>
    <string name="title_total_saved">Total Saved</string>
    <string name="title_saved_price">150.000 đ</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="title_address">Address</string>
    <string name="title_customer_name_hint">Full name</string>
    <string name="title_customer_phone_number_hint">Phone Number</string>
    <string name="title_customer_phone_number_edit">0941705717</string>
    <string name="title_customer_name_edit">Anh Khoa</string>
    <string name="title_customer_address_hint">Province/City, District, Ward/Commune, Street name, House number</string>
    <string name="title_customer_address_edit">669 Do Muoi, Linh Xuan Ward, Thu Duc City, Ho Chi Minh City</string>
    <string name="title_google">Google</string>
    <string name="title_transaction_edit_address_cancel">"Cancel "</string>
    <string name="title_transaction_edit_address_confirm">Confirm</string>
    <string name="title_successful_payment">SUCCESSFUL PAYMENT</string>
    <string name="title_order_completed">THE ORDER HAS BEEN PLACED</string>
    <string name="title_order_tracking_message">Track your order here</string>
    <string name="title_order_details">See Order Details</string>
    <string name="title_product_suggest">SUGGESTED PRODUCTS</string>
    <string name="title_trans_add_to_cart">Add to Cart</string>
    <string name="title_trans_product_name">RƯỢU NGÔ</string>
    <string name="title_trans_product_brand">Rượu Tây Bắc</string>
    <string name="title_product_star">5.0</string>
    <string name="title_product_review">(10 Reviews)</string>
    <string name="title_trans_product_price">200.000đ</string>
    <string name="title_the_add_to_cart">"The "</string>
    <string name="title_add_to_cart_message">" has been added to your cart"</string>
    <string name="title_add_to_cart">Add to cart</string>
    <string name="title_confirm_exit">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure not to make order</string>
    <string name="title_confirm_exit_message_yes">Yes</string>
    <string name="title_confirm_exit_message_no">No</string>
    <string name="title_transaction_face_authorization"> FACE AUTHORIZATION</string>
    <string name="title_face_authorization_processing">Facial recognition is in progress for payment authentication, please look straight ahead...</string>
    <string name="title_face_authorization_error">Authentication failed, please enter password</string>
    <string name="title_face_error_password">Password:</string>
    <string name="title_face_author_password_hint">Enter your password</string>
    <string name="title_face_authorization_completed">Verified successfully</string>
    <string name="title_edit_payment_method">EDIT PAYMENT METHOD</string>
    <string name="title_card_info">Card Information</string>
    <string name="title_card_type">Card Type:</string>
    <string name="title_choose_bank">Bank:</string>
    <string name="title_card_number">Number:</string>
    <string name="title_security_cvv">CVV:</string>
    <string name="title_expiration_date">Expiration date</string>
    <string name="title_cvv">345678901</string>
    <string name="error_invalid_expiry_date">Invalid Expiry Date</string>
    <string name="profile_user_name">CAM TU</string>
    <string name="profile_user_email">tuttc22411c@st.uel.edu.vn</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_save_info_button">Save</string>
    <string name="card_update_payment_info_title">UPDATE PAYMENT INFORMATION</string>
    <string name="card_info_title">Card Information</string>
    <string name="card_type_label">Card Type:</string>
    <string name="card_type_prompt">Select Card Type</string>
    <string name="card_select_bank_label">Select Bank:</string>
    <string name="card_select_bank_placeholder"></string>
    <string name="card_number_label">Card Number:</string>
    <string name="card_number_placeholder"></string>
    <string name="card_cvv_label">CVV:</string>
    <string name="card_cvv_placeholder"></string>
    <string name="card_expiry_date_label">Expiry Date:</string>
    <string name="card_expiry_date_placeholder"></string>
    <string name="card_save_info_button">Save information</string>
    <string name="order_detail_title">ORDER DETAILS</string>
    <string name="order_tab_all">All</string>
    <string name="order_tab_confirm">Pending Confirmation</string>
    <string name="order_tab_payment">Pending Payment</string>
    <string name="order_tab_shipping">Pending Delivery</string>
    <string name="order_tab_complete">Delivered</string>
    <string name="order_code_label">Order Code:</string>
    <string name="order_code_value">SARU12345</string>
    <string name="order_details_link">View details</string>
    <string name="order_date_label">Order Date:</string>
    <string name="order_date_value">11/20/2024</string>
    <string name="order_status_value">Delivered</string>
    <string name="order_product_count_value">2 products</string>
    <string name="order_total_amount_value">420,000₫</string>
    <string name="title_Addaddress_AddnewAddress">Add new address</string>
    <string name="title_addaddress_RecipientName">Recipient Name</string>
    <string name="title_addaddress_PhoneNumber">Phone Number</string>
    <string name="title_addaddress_Address">Address</string>
</resources>